--- a/templates/tempsens/index.html
+++ b/templates/tempsens/index.html
@@ -21,6 +21,7 @@
 
     <main>
         <article>
+        <p>{{ string }}</p>
             <p id="local_temperature">Temperature: {% if temperature %} {{ temperature }} {% endif %} </p>
             <p id="local_humidity">Humidity:{% if humidity %} {{ humidity }} {% endif %} </p>
             <p id="local_time">Time:{% if local_time %} {{ local_time }} {% endif %}</p>
