--- a/templates/tempsens/index.html
+++ b/templates/tempsens/index.html
@@ -25,7 +25,7 @@
             <p id="local_temperature">Temperature: {% if temperature %} {{ temperature }} {% endif %} </p>
             <p id="local_humidity">Humidity:{% if humidity %} {{ humidity }} {% endif %} </p>
             <p id="local_time">Time:{% if local_time %} {{ local_time }} {% endif %}</p>
-            <form action="/tempsens/disable_led" method="post">
+            <form action="/tempsens/disable_led/" method="get">
                 <input type="submit" value="Button">
             </form>
         </article>
