updated client script

--- a/templates/tempsens/index.html
+++ b/templates/tempsens/index.html
@@ -37,7 +37,7 @@
     </footer>
     <script>
         setInterval(getCurrentTime, 1000);
-        setIntervat(getTemperatureValue, 3000);
+        setInterval(getTemperatureValue, 3000);
     </script>
 </body>
 
