updated client script and view

--- a/templates/tempsens/index.html
+++ b/templates/tempsens/index.html
@@ -29,6 +29,9 @@
             <form action="/tempsens/disable_led/" method="get">
                 <input type="submit" value="Disable led">
             </form>
+            <form action="/tempsens/power_led/" method="get">
+                <input type="submit" value="Power led">
+            </form>
         </article>
     </main>
 
