updated client script and view

--- a/templates/tempsens/index.html
+++ b/templates/tempsens/index.html
@@ -42,6 +42,7 @@
     <script>
         getCurrentTime();
         setInterval(getCurrentTime, 1000);
+        setInterval(getTemperatureValue, 3000);
     </script>
 </body>
 
